# Parasol_Pick_Place

./: README.md  frames_2026-04-19_21.24.50.gv
src/: check_this.urdf  just_ur.urdf.xacro  just_urdf_2.urdf.xacro  live_dump.urdf  moveit_3307.rviz  my_red_cube.urdf  my_ur5e.urdf  p3_pick_place.py  test.urdf  test_description.txt  test_dump.urdf  test_dump_ur_des.urdf  test_dump_with_control.urdf  ur5e_workcell.urdf.xacro  ur5e_workcell_macro.xacro  ur_plus_gripper.urdf.xacro  ur_plus_gripper_control.urdf.xacro
src/gripper_workcell_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/gripper_workcell_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  my_robot_cell.ros2_control.xacro
src/gripper_workcell_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/hello_moveit/: .gitignore  CMakeLists.txt  frames_2026-04-08_15.55.20.gv  package.xml
src/hello_moveit/src/: hello_moveit.cpp  operate_gripper.cpp
src/just_ur5e_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/just_ur5e_moveit_config/config/: initial_positions.yaml  my_robot_cell.ros2_control.xacro  my_robot_cell.srdf  my_robot_cell.urdf.xacro
src/just_ur5e_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/mover_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/mover_moveit_config/config/: joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml  ur5e_gripper.ros2_control.xacro  ur5e_gripper.srdf  ur5e_gripper.urdf.xacro
src/mover_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/my_robot_cell_control/config/: ros2_controllers.yaml
src/my_robot_cell_control/launch/: rsp.launch.py  start_robot.launch.py
src/my_robot_cell_control/urdf/: gripper_stuff.txt  (+1 more)
src/my_ur5e_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/p3_cell_control/: CMakeLists.txt  package.xml
src/p3_cell_description/: CMakeLists.txt  package.xml
src/p3_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/parasol_pick_place/: CMakeLists.txt  package.xml
src/parasol_pick_place/src/: p3_arm_mover.cpp  p3_gripper_operator.cpp
src/ur5e_director/: package.xml  setup.cfg  setup.py
src/ur5e_director/ur5e_director/: director_node.py
(+32 files in other folders)
